--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "hiv-infection-model",
+  "name": "applied-SIR",
   "version": "1.0.0",
-  "description": "A differential equation system solver (mainly index.html), applied on a model of an HIV infection (hiv-model.html)",
-  "main": "jquery.flot.js",
+  "description": "Applied SIR",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ricsam/hiv-infection-model.git"
+    "url": "git+https://github.com/ricsam/applied-SIR.git"
   },
   "keywords": [],
-  "author": "Richard Samuelsson <noobtoothfairy@gmail.com> (https://github.com/euhiemf)",
+  "author": "Richard Samuelsson <ricsam@kth.com> (https://github.com/ricsam)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ricsam/hiv-infection-model/issues"
+    "url": "https://github.com/ricsam/applied-SIR/issues"
   },
-  "homepage": "https://github.com/ricsam/hiv-infection-model#readme",
+  "homepage": "https://github.com/ricsam/applied-SIR#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "webpack": "^3.6.0"
   }
 }
